Books are now added to the API
- Creation of model, repository, business and controller for Books.
- Database name slightly changed.

--- a/RESTWithNET8/appsettings.json
+++ b/RESTWithNET8/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySQLConnection": {
-    "MySQLConnectionString":  "Server=localhost;DataBase=rest_with_net;Uid=root;Pwd=admin123"
+    "MySQLConnectionString":  "Server=localhost;DataBase=restapi_with_aspnet;Uid=root;Pwd=admin123"
   },
   "Logging": {
     "LogLevel": {
