--- a/RESTWithNET8/RESTWithNET8.csproj
+++ b/RESTWithNET8/RESTWithNET8.csproj
@@ -7,6 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Repositories\Implementations\**" />
+    <Content Remove="Repositories\Implementations\**" />
+    <EmbeddedResource Remove="Repositories\Implementations\**" />
+    <None Remove="Repositories\Implementations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Repositories\IPersonRepository.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.0.0" />
     <PackageReference Include="Evolve" Version="3.2.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.1" />
