JWT authentication implemented
- JWT authentication was added to the API. The client shall now provide an username and password in an authentication request to be granted an access token to the other API requests.
- References to the table 'persons' have been fixed.

--- a/RESTWithNET8/appsettings.json
+++ b/RESTWithNET8/appsettings.json
@@ -1,6 +1,13 @@
 {
   "MySQLConnection": {
-    "MySQLConnectionString":  "Server=localhost;DataBase=restapi_with_aspnet;Uid=root;Pwd=admin123"
+    "MySQLConnectionString": "Server=localhost;DataBase=restapi_with_aspnet;Uid=root;Pwd=admin123"
+  },
+  "TokenConfigurations": {
+    "Audience": "ExampleAudience",
+    "Issuer": "ExampleIssuer",
+    "Secret": "MY_NEWEST_SUPER_SUPER_SECRET_KEY",
+    "Minutes": 60,
+    "DaysToExpiry":  7
   },
   "Logging": {
     "LogLevel": {
