--- a/RESTAPIWithASPNET/appsettings.json
+++ b/RESTAPIWithASPNET/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySQLConnection": {
-    "MySQLConnectionString": "Server=localhost;DataBase=restapi_with_aspnet;Uid=root;Pwd=admin123"
+    "MySQLConnectionString": "Server=db;DataBase=restapi_with_aspnet;Uid=root;Pwd=docker;SslMode=none"
   },
   "TokenConfigurations": {
     "Audience": "ExampleAudience",
