Continuous Integration with Azure and GitHub Actions
- The API now uses an Azure server and database.
- The API has now Continuous Integration with GitHub Actions.
- Continuous Integration with GitHub Actions badge added to README.

--- a/RESTAPIWithASPNET/appsettings.json
+++ b/RESTAPIWithASPNET/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MySQLConnection": {
-    "MySQLConnectionString": "Server=db;DataBase=restapi_with_aspnet;Uid=root;Pwd=docker;SslMode=none"
+    "MySQLConnectionString": "Server=renandbserver.mysql.database.azure.com; Port=3306; Database=restapi_with_aspnet; UserID = renan; Password=admin123!; SslMode=Preferred;"
   },
   "TokenConfigurations": {
     "Audience": "ExampleAudience",
