--- a/RESTAPIWithASPNET/RESTAPIWithASPNET.csproj
+++ b/RESTAPIWithASPNET/RESTAPIWithASPNET.csproj
@@ -17,7 +17,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="appsettings_azuredatabase.json.backup" />
     <None Remove="RESTAPIWithASPNET.http" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings_azuredatabase.json.backup" />
   </ItemGroup>
 
   <ItemGroup>
@@ -34,6 +43,10 @@
 
   <ItemGroup>
     <Folder Include="Uploads\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="appsettings.json" />
   </ItemGroup>
 
   <ItemGroup>
