Paths in Dockerfile updated
- More instances of "\API" have been added to the beginning of the paths in Dockerfile.

--- a/API/RESTAPIWithASPNET/Dockerfile
+++ b/API/RESTAPIWithASPNET/Dockerfile
@@ -9,15 +9,15 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["API/RESTAPIWithASPNET/RESTAPIWithASPNET.csproj", "RESTAPIWithASPNET/"]
-RUN dotnet restore "./API/RESTAPIWithASPNET/RESTAPIWithASPNET.csproj"
+COPY ["API/RESTAPIWithASPNET/RESTAPIWithASPNET.csproj", "API/RESTAPIWithASPNET/"]
+RUN dotnet restore "API/RESTAPIWithASPNET/RESTAPIWithASPNET.csproj"
 COPY . .
-WORKDIR "/src/RESTAPIWithASPNET"
-RUN dotnet build "./RESTAPIWithASPNET.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/API/RESTAPIWithASPNET"
+RUN dotnet build "RESTAPIWithASPNET.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./RESTAPIWithASPNET.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "RESTAPIWithASPNET.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
