--- a/Client/package.json
+++ b/Client/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.1.0",
 		"react-router-dom": "^6.22.3",
 		"react-scripts": "^5.0.1",
 		"web-vitals": "^2.1.4"
@@ -19,10 +20,17 @@
 		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
-		"extends": ["react-app", "react-app/jest"]
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
 	},
 	"browserslist": {
-		"production": [">0.2%", "not dead", "not op_mini all"],
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
 		"development": [
 			"last 1 chrome version",
 			"last 1 firefox version",
